# dentist-appointment-automation-agent

./: .env  .gitignore  main.py  pyproject.toml  requirements.txt
config/: settings.py
db/: db.py  ingest_db.py  orm_crud.py
exception_handling/: custom_exception.py
logger/: custom_logger.py
models/: slot.py
notebooks/: experiments.ipynb
src/: __init__.py
src/agents/: booking_agent.py
